new feature and html:compare different characters

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <a href="{{ url_for('character.index') }}">Home</a>
-                <a href="{{ url_for('character.character_detail', id=1) }}">Characters</a>
+                <a href="{{ url_for('character.compare') }}">Compare</a>
             </div>
         </div>
     </nav>
