--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,7 +74,7 @@
         </div>
         <button type="submit">Apply Filters</button>
         <form method="get" action="{{ url_for('character.clear_filters') }}">
-            <button type="submit">Clear Filters</button>
+            <button type="submit" class="clear-btn">Clear Filters</button>
         </form>
     </form>
 
@@ -110,7 +110,7 @@
                             <input type="hidden" name="filter_alive" value="{{ filter_alive }}">
                             <input type="hidden" name="sort_appearances" value="{{ sort_appearances }}">
                             <input type="checkbox" name="select" value="1" {% if character.page_id in selected_ids %}checked{% endif %}>
-                            <button type="submit">Compare</button>
+                            <button type="submit" class="compare-btn">Compare</button>
                         </form>
                     </td>
                     <td><a href="{{ url_for('character.character_detail', id=character.page_id) }}">{{ character.name|default('Unknown') }}</a></td>
