--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
         <a href="{{ url_for('character.clear_filters') }}" class="clear-btn">Clear Filters</a>
     </form>
 
-    <table>
+    <table style="background-color: rgba(255, 255, 255, 0.9);">
         <thead>
             <tr>
                 <th>Select</th>
